2014-11-03 John Wu <John dot Wu at ACM dot org>
	* src/ifade.cpp, src/ixpack.cpp, src/ixpale.cpp, src/ixzone.cpp:
	add statement to log conditions leading to error code -13 to
	debug a problem reported by Fasika Daksa
	* src/whereParser.yy:1195 initialize tm_isdst to -1 to tell mktime
	to figure out whether DST is in effect (a solution found by Jon
	Strabala)

2014-11-01 John Wu <John dot Wu at ACM dot org>
	* src/whereParser.yy: update TO_UNIXTIME_LOCAL and TO_UNIXTIME_GMT
	based on suggestion from Jan Stabala
	* src/table.h, src/tafel.h, src/tafel.cpp: add functions
	getASCIIDictionary and setASCIIDictionary

2014-10-29 John Wu <John dot Wu at ACM dot org>
	* src/whereLexer.ll, src/whereParser.yy: change TO_UNIXTIME_LOCAL
	and TO_UNIXTIME_GMT to be the inverse of FROM_UNIXTIME_LOCAL and
	FROM_UNIXTIME_GMT
	* src/dictioinary.h, src/dictionary.cpp: rename print to toASCII
	and add function fromASCII to read the output of toASCII

2014-10-28 John Wu <John dot Wu at ACM dot org>
	* src/qExpr.h: assign the left child in the copy constructors of
	customFunction1 and stringFunction1 to avoid the problem seg fault
	reported by Jon Strabala when using TO_UNIXTIME_LOCAL

2014-10-25 John Wu <John dot Wu at ACM dot org>
	* src/qExpr.h, src/qExpr.cpp: add stringFunction1
	* src/selectParser.yy: change FORMAT_UNIXTIME_LOCAL and
	FORMAT_UNIXTIME_GMT to use the new stringFunction1 instead of
	treating them directives for printing only.  This change should
	make these function functions behave like existing functions and
	address the consistency issues raised by Jon Strabala.
	* src/part.h, src/part.cpp: add new vresion of function calculate
	to evaluate the string value functions

2014-10-24 John Wu <John dot Wu at ACM dot org>
	* src/*.cpp: change varaibles receiving return values of UnixWrite
	from int to off_t per suggestion of Zheng Yan from Harvard
	* src/colValues.cpp: sorting functions could leave the 2nd element