@@ -6,9 +6,3 @@
 7190, 16, 1303808411
 7066, 16, 1303808535
 7052, 16, 1303873349
-7100, 20, 1301615999
-7101, 20, 1301616000
-7102, 20, 1301616001
-7202, 22, 1301641199
-7202, 22, 1301641200
-7202, 22, 1301641201
